# isaac-sim-ros

./: .gitignore  README.md
src/SDF_files/CAT_D6XE/: CAT_D6XE.sdf  (+1 more)
src/URDF_files/CAT_D6XE/cat_d6xe_description/: CMakeLists.txt  package.xml
src/URDF_files/CAT_D6XE/cat_d6xe_description/meshes/: blade.dae  body.dae  tracks.dae
src/URDF_files/CAT_D6XE/cat_d6xe_description/urdf/: CAT_D6XE.urdf
src/URDF_files/ZX200/zx200_description/: CMakeLists.txt  package.xml
src/URDF_files/ZX200/zx200_description/meshes/: arm.dae  arm_cylinder.dae  arm_link_arm_collision_geometry_arm_collision.dae  arm_piston.dae  body.dae  boom.dae  boom_cylinders.dae  boom_link_boom_collision_geometry_boom_collision.dae  boom_pistons.dae  bucket.dae  bucket_cylinder.dae  bucket_link_bucket_collision_geometry_bucket_collision.dae  bucket_linkage_H_link.dae  bucket_linkages_side.dae  bucket_piston.dae  caterpillar.dae
src/URDF_files/ZX200/zx200_description/urdf/: zx200.urdf
src/USD_files/: CAT_D6XE.usd  IC120.usd  SV513.usd  ic120_nav2_implementation.usd  ic120_nav2_implementation_v2_test.usd  zx120.usd  zx200.usd
src/nav2_implementation/: CMakeLists.txt  package.xml
src/nav2_implementation/config/: ekf.yaml  goals.txt  output.json
src/nav2_implementation/launch/: isaac_ros_navigation_goal.launch.py  nav2_custom_map.launch.py
src/nav2_implementation/maps/: map_v2_occuGrid.yaml  nav2_custom_map.yaml
src/nav2_implementation/params/: nav2_custom_map_navigation_params.yaml
src/nav2_implementation/rviz2/: nav2_custom_map.rviz
src/nav2_implementation/src/: waypoint_follow.cpp
(+85 files in other folders)
