<?xml version="1.0"?>
<package format="3">
  <name>cat_d6xe_description</name>
  <version>2.0.7</version>
  <description>Cat_d6xe resources</description>
  <maintainer email="p.cesarino@qibitech.com">Qibitech</maintainer>
  <license>TODO License</license>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
      <build_type>ament_cmake</build_type>
  </export>
</package>
